Deflake ConnectionTest.Audio test

WebRTC now ignores x-google-min-bitrate parameter for opus codec,
which was used in remoting. As result the audio was sent at 64kbps,
instead of desired 160kbps. Updated webrtc_transport to use
maxaveragebitrate to specify target bitrate, which should make the
test non-flaky.

BUG=695384

Review-Url: https://codereview.chromium.org/2711053005
Cr-Commit-Position: refs/heads/master@{#453295}

Former-commit-id: 6aaea61066c6df8a2bceead07fa433ae08ce365c